--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/expensesbot
-spring.datasource.username=postgres
-spring.datasource.password=32147
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.show-sql=true
 
 ## Hibernate Properties
