--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Telegram bot token
-token=
+token=972039490:AAFf5aJUDInYnlVnlHQEwsMzSYTXr8sMZhY
 
 #telegram bot username
-username=
+username=e_x_p_enses_bot
