--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
     <!-- For StringUtils -->
     <dependency>
