Fixed some bugs and ping from google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ server.port=5000
 telegrambot.userName=@
 telegrambot.botToken=
 telegrambot.webHookPath=
+
+# Ping from google
+subscriptions.processPeriod=1800000
+pingtask.url=https://www.google.com
+pingtask.period=1200000
