--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,9 @@
       <plugin>
         <groupId>com.heroku.sdk</groupId>
         <artifactId>heroku-maven-plugin</artifactId>
-        <version>3.0.3</version>
+        <configuration>
+          <jdkVersion>11</jdkVersion>
+        </configuration>
       </plugin>
     </plugins>
   </build>
