--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
-server.port=5000
+#server.port=5000
+server.port=${PORT:8080}
 telegrambot.userName=@expenses_track_bot
 telegrambot.botToken=1146765497:AAFtWSoLcLliyKX2DyzcRlxxpgZiN7_65Ss
 telegrambot.webHookPath=https://expenses-bot.herokuapp.com/
