Changed ping url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ telegrambot.webHookPath=https://expenses-bot.herokuapp.com/
 
 # Ping from google
 subscriptions.processPeriod=600000
-pingtask.url=https://www.google.com
+pingtask.url=https://expenses-bot.herokuapp.com/
 pingtask.period=600000
